# tuladays-2024

./: .gitignore  README.md  bot.larek.tech  build_and_push.sh  docker-compose.yaml  docker-config.yaml  example.env  schema.excalidraw  todo.md  tula.conf
backend/: Dockerfile.backend  Dockerfile.migration  Makefile  config.yaml  go.mod  go.sum  rag_service.proto  sqlc.yaml
backend/auth/: config.go  constants.go  errors.go
backend/auth/handlers/: auth.go  email.go  external.go
backend/auth/middleware/: middleware.go
backend/auth/models/: email.go
backend/auth/repo/: pg.go  repo.go
backend/auth/service/: email.go  external.go  service.go  token.go
backend/bruno/: bruno.json
backend/bruno/auth/: externalData.bru  login.bru  me.bru  register.bru
backend/bruno/dashboard/: dashboard-id.bru  patients.bru
backend/bruno/environments/: tuladays-dev.bru  tuladays-local.bru
backend/bruno/medicine/: Create Medicine Record.bru  Get Dashboard for User.bru  Get Medicine Record.bru  Get Patients.bru  List All Medicine Records.bru  List Medicine Records for Patient.bru
backend/bruno/telegram/: telegram notigication.bru
backend/chat/: config.go
backend/chat/handlers/: websocket.go
backend/chat/models/: chat.go  message.go
backend/chat/repo/: pg.go  repo.go
backend/chat/service/: service.go
backend/cmd/: main.go
backend/dashboard/: config.go  errors.go
backend/dashboard/handlers/: dashboard.go  medicine.go  user.go
backend/dashboard/models/: medicine.go  patient.go
backend/dashboard/repo/: ch.go  pg.go  pg_medicine.go  repo.go
backend/dashboard/service/: service.go
backend/pkg/click/: click.go  config.go
backend/pkg/db/: chat.sql.go  medicine.sql.go  models.go  patients.sql.go  users.sql.go
backend/pkg/pb/: rag_service.pb.go  rag_service_grpc.pb.go
backend/pkg/postgres/: config.go  postgres.go
backend/server/: config.go  server.go
backend/static/: index.html  manifest.webmanifest  sw.js
backend/static/assets/: _doctor-BoDA2U5t.js  _doctor-CsGdfpDE.js  _doctor-DYGnJ1e2.js  _id-CujfkPmj.js  _id-O6ibVQ1g.js  _id-xaiL5TUn.js  (+18 more)
bot/: .gitignore  Dockerfile.telegram  ch.py  db.py  main.py  ml.py  models.py  pyproject.toml
etl/: dev.requirements.txt  requirements.txt
etl/disease/: parse.ipynb  pyproject.toml  test.txt  vector.ipynb
etl/external-data/: generate.py
etl/measurements/: data.yaml  docker-compose.yaml  pipeline.ipynb
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: routeTree.gen.ts
ml/: Readme.md
ml/cv_detection/: prediction_pipeline.py  yolo_inference  yolo_training.py
rag/: pipeline.py  pyproject.toml  rag_service.proto  rag_service_pb2.py  rag_service_pb2_grpc.py  server.py
volumes/: .gitignore
(+59 files in other folders)
